Add October Agent Security Challenge CTF
Implemented complete October 2025 Cybersecurity Awareness Month challenge featuring 5 progressive AI agent security levels with authentication, leaderboard, and certificate system.

Features:
- 5 CTF levels covering prompt injection, MCP exploitation, indirect injection, command injection RCE, and multi-stage attacks
- User registration and authentication system with Supabase
- Real-time leaderboard with scoring (flags × 1000 - hints × 50 - time/60)
- Professional certificate generation with PDF download using @react-pdf/renderer
- Progress tracking and hint system
- October Halloween-themed UI with pumpkin decorations
- Email composer component for Level 3 indirect injection challenge
- Comprehensive database schema with migrations
- Build configuration updates (disabled linting during builds)

Technical additions:
- Supabase integration for user management and progress tracking
- OpenAI GPT-4o-mini integration for all challenge levels
- LangChain agent framework for Level 1
- React Context for global state management
- PDF certificate generation with emoji support via Twemoji CDN
- Leaderboard view with automatic score calculation

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 
 # testing
 /coverage
+.playwright-mcp/
 
 # next.js
 /.next/
@@ -19,10 +20,12 @@
 
 # production
 /build
+/dist
 
 # misc
 .DS_Store
 *.pem
+.cache/
 
 # debug
 npm-debug.log*
@@ -39,3 +42,38 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# IDE
+.vscode/*
+!.vscode/extensions.json
+!.vscode/settings.json
+.idea/
+*.swp
+*.swo
+*~
+.project
+.classpath
+.settings/
+*.sublime-workspace
+*.sublime-project
+
+# OS
+.DS_Store
+Thumbs.db
+Desktop.ini
+
+# ESLint
+.eslintcache
+eslint.txt
+
+# Supabase local dev
+.supabase/
+**/supabase/.branches
+**/supabase/.temp
+
+# Database seed files (contains dummy data)
+seed_dummy_users.sql
+
+# Claude Code
+.claude/
+!.claude/commands/
