--- a/package.json
+++ b/package.json
@@ -9,20 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@langchain/core": "^0.3.78",
+    "@langchain/openai": "^0.6.16",
+    "@opentelemetry/api": "^1.9.0",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-slot": "^1.1.1",
+    "@react-pdf/renderer": "^4.3.1",
+    "@supabase/supabase-js": "^2.75.0",
     "@vercel/analytics": "^1.4.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "html2canvas": "^1.4.1",
+    "langchain": "^0.3.36",
     "lucide-react": "^0.471.0",
     "next": "15.1.4",
-    "openai": "^4.78.1",
-    "posthog-js": "^1.211.2",
     "react": "^19.0.0",
     "react-cookie": "^7.2.2",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
